# team-7-capstone-team-7-falcon

./: .env  .env.example  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  task.md
.github/workflows/: ci-test.yml  lint-python.yml  lint.yml
backend/: .env  .env.docker  .env.docker.example  .env.example  .env.test  .gitignore  Dockerfile  README.md  nest-cli.json  package-lock.json  package.json
backend/coverage/: cobertura-coverage.xml  lcov.info
backend/migrations/: 1717659360988-user_model.ts  1717791764947-users-table.ts  1717974422457-user-avatar-url.ts  1718059192430-courses.ts  1718066358920-course-model.ts  1718067439572-semester-model.ts  1718344210720-auto-increment-column-student-user-model.ts  1718851156781-exam-release-date-nullable.ts  1719088671594-user-email_verified.ts  1719091246676-token-user-model.ts  (+5 more)
docs/: TOC.md
frontend/: .dockerignore  .env.docker  .env.docker.example  .env.local.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
optical-marking-management/: package-lock.json  package.json  tsconfig.json
tasks/OMR-tool/: .gitignore  Dockerfile  README.md  pyproject.toml
tasks/OMR-tool/model_training/: .gitignore  README.dataset.txt  README.roboflow.txt  train_OMR_model.ipynb
tasks/OMR-tool/model_training/data/: val.txt
tasks/OMR-tool/model_training/dataset/: README.dataset.txt  README.roboflow.txt
tasks/OMR-tool/model_training/dataset/data/: val.txt
tasks/OMR-tool/model_training/dataset/test/: _annotations.txt
tasks/OMR-tool/model_training/dataset/train/: _annotations.txt
tasks/OMR-tool/model_training/test/: _annotations.txt
tasks/OMR-tool/model_training/train/: _annotations.txt
tasks/OMR-tool/model_training/trained_model_onnx/: args.yaml  results.csv
tasks/OMR-tool/model_training/trained_ubc_only_onnx/: results.csv
tasks/OMR-tool/model_training/trained_with_customs_onnx/: args.yaml
tasks/OMR-tool/model_training/valid/: _classes.txt
tasks/OMR-tool/object_inference/: inferencer.py
tasks/OMR-tool/omr_tool/: .env.example  app.py  main.py  omr_pipeline.py
tasks/OMR-tool/omr_tool/object_inference/: infer_from_page.py  inferencer.py
tasks/OMR-tool/omr_tool/omr_pipeline/: generate_grades.py  identify_student.py  omr_pipeline.py  omr_tasks.py  read_bubbles.py
tasks/OMR-tool/omr_tool/utils/: convert_to_image.py  image_process.py  images_to_pdf.py  object_process.py  pdf_to_images.py
tasks/OMR-tool/tests/: test_convert_to_image.py  test_images_to_pdf.py  test_inferencer.py  test_omr_tasks.py  test_pdf_to_images.py
tasks/OMR-tool/utils/: pdf_to_images.py
tasks/bubble-sheet-generator/: Dockerfile  README.md  pyproject.toml
tasks/bubble-sheet-generator/bubble_sheet_generator/: .env.example  main.py
tasks/bubble-sheet-generator/tests/: test_generate_bubble_sheet.py
(+1627 files in other folders)
