[tool.poetry]
name = "omr-tool"
version = "0.1.0"
description = ""
authors = ["fperellaholfeld <fperellaholfeld@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.train.dependencies]
tensorboardx = "^2.6.2.2"
torch = "^2.3.1"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
