[tool.poetry]
name = "omr-tool"
version = "0.1.0"
description = ""
authors = ["fperellaholfeld <fperellaholfeld@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.train.dependencies]
tensorboardx = "^2.6.2.2"
numpy = "^2.0.0"
ipykernel = "^6.29.4"
scikit-image = "^0.24.0"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"
easydict = "^1.13"
pillow = "^10.3.0"
nvidia-cudnn-cu12 = "8.9.2.26"
torch = {version = "^2.3.1+cu121", source = "torch_CUDA12"}



[[tool.poetry.source]]
name = "torch_CUDA12"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
