[tool.poetry]
name = "omr-tool"
version = "0.1.0"
description = ""
authors = ["fperellaholfeld <fperellaholfeld@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pdf2image = "^1.17.0"
opencv-python = "^4.10.0.84"
imutils = "^0.5.4"
onnxruntime = "^1.18.1"
torch = "^2.3.1"
onnx = "^1.16.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[[tool.poetry.source]]
name = "torch_CUDA12"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
