[tool.poetry]
name = "bubble-sheet-generator"
version = "0.1.1"
description = ""
authors = ["fperellaholfeld <fperellaholfeld@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
reportlab = "^4.2.0"
pillow = "^10.3.0"
pypdf = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
